--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
         ]
     },
     "devDependencies": {
+        "cypress": "^12.11.0",
         "eslint": "^8.31.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-cypress": "^2.13.3",
         "eslint-plugin-functional": "^4.4.1",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "^6.6.1",
